--- a/app/src/main/res/layout/activity_add_advice.xml
+++ b/app/src/main/res/layout/activity_add_advice.xml
@@ -65,16 +65,15 @@
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
-                <EditText
-                    android:id="@+id/authorInput"
+                <TextView
+                    android:id="@+id/selectedAuthor"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:hint="Who are you?"
-                    android:inputType="textPersonName"
+                    android:gravity="center"
                     android:minHeight="48dp"
-                    android:textAlignment="center"
-                    android:textSize="14sp" />
+                    android:text="TextView"
+                    android:textAlignment="center" />
             </LinearLayout>
 
         </LinearLayout>
