--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
             android:layout_marginTop="150dp"
             android:gravity="center"
             android:minHeight="48dp"
-            android:text="Category"
+            android:text="Default Category"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="16sp"
