--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,6 +80,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="200dp"
             android:minHeight="48dp" />
+
+        <Button
+            android:id="@+id/fetchAdvices"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="65dp"
+            android:layout_marginTop="630dp"
+            android:text="Fetch advices" />
     </com.google.android.material.navigation.NavigationView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
